fix: add styles for dark mode

--- a/src/assets/styles/helpers/_classname.scss
+++ b/src/assets/styles/helpers/_classname.scss
@@ -387,7 +387,7 @@ $gaps: 4, 8, 12, 16;
       primary: var(--grey-50),
       secondary: var(--grey-100),
       tertiary: var(--grey-40),
-      disabled: var(--grey-20),
+      disabled: var(--grey-30),
       selected: var(--brand-500),
       inverse: var(--white),
       brand: var(--brand-700),
